[package]
edition = "2021"
name = "nrs-bundle_ssimulacra2"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.1", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
ssimulacra2 = "0.3.0"
image = "0.24.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
